--- a/pom.xml
+++ b/pom.xml
@@ -36,13 +36,12 @@
            <version>7.3.2</version>
        </dependency>
 
-
-
-
-
-
-
-
+       <dependency>
+           <groupId>io.github.bonigarcia</groupId>
+           <artifactId>webdrivermanager</artifactId>
+           <version>5.6.3</version>
+           <scope>test</scope>
+       </dependency>
 
 
    </dependencies>
